metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/DisputeContentRule__c.object-meta.xml
<CustomObject>
    <description>Junction object between dispute content and dispute experiences.</description>
    <label>Dispute Content Rule</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Content Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>