metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DateOfReference__c.field-meta.xml
<CustomField>
    <fullName>DateOfReference__c</fullName>
    <description>Text field to store the field api name of the date to use as reference for the email notification send date.</description>
    <inlineHelpText>Text field to store the field api name of the date to use as reference for the email notification send date.</inlineHelpText>
    <label>Date of Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>