metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeContent__c.field-meta.xml
<CustomField>
    <fullName>DisputeContent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Dispute Content (aka Success Tip) record for the assignment.</description>
    <inlineHelpText>Lookup to the related Dispute Content (aka Success Tip) record for the assignment.</inlineHelpText>
    <label>Dispute Content</label>
    <referenceTo>DisputeContent__c</referenceTo>
    <relationshipName>DisputeContentAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>