metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeExperience__c.field-meta.xml
<CustomField>
    <fullName>DisputeExperience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Dispute Experience record for the assignment.</description>
    <inlineHelpText>Lookup to the related Dispute Experience record for the assignment.</inlineHelpText>
    <label>Dispute Experience</label>
    <referenceTo>DisputeExperience__c</referenceTo>
    <relationshipName>DisputeContentAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>