metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeOfferCount__c.field-meta.xml
<CustomField>
    <fullName>DisputeOfferCount__c</fullName>
    <description>The threshold number of offers per dispute that will trigger the automatic tip.</description>
    <inlineHelpText>The threshold number of offers per dispute that will trigger the automatic tip.</inlineHelpText>
    <label>Dispute Offer Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>