metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeOfferMessageCount__c.field-meta.xml
<CustomField>
    <fullName>DisputeOfferMessageCount__c</fullName>
    <description>The threshold number of messages to trigger the auto tip based on the most recent offer.</description>
    <inlineHelpText>The threshold number of messages to trigger the auto tip based on the most recent offer.</inlineHelpText>
    <label>Dispute Offer Message Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>