metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeOfferStatus__c.field-meta.xml
<CustomField>
    <fullName>DisputeOfferStatus__c</fullName>
    <description>The status the offer must be in order to trigger the automatic tip.</description>
    <inlineHelpText>The status the offer must be in order to trigger the automatic tip.</inlineHelpText>
    <label>Dispute Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DisputeOfferStatus</valueSetName>
    </valueSet>
</CustomField>