metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeStage__c.field-meta.xml
<CustomField>
    <fullName>DisputeStage__c</fullName>
    <description>The stage the dispute must be in order for the automated message to be triggered.</description>
    <inlineHelpText>The stage the dispute must be in order for the automated message to be triggered.</inlineHelpText>
    <label>Dispute Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DisputeStage</valueSetName>
    </valueSet>
</CustomField>