metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/DisputeStatus__c.field-meta.xml
<CustomField>
    <fullName>DisputeStatus__c</fullName>
    <description>The status the dispute should be in order to trigger the creation of the message record.</description>
    <inlineHelpText>The status the dispute should be in order to trigger the creation of the message record.</inlineHelpText>
    <label>Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DisputeStatus</valueSetName>
    </valueSet>
</CustomField>