metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object record that will trigger the automatic tip event.</description>
    <inlineHelpText>The object record that will trigger the automatic tip event.</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispute__c</fullName>
            </value>
            <value>
                <fullName>DisputeOffer__c</fullName>
            </value>
            <value>
                <fullName>DisputeMessage__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>