metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/RuleNumber__c.field-meta.xml
<CustomField>
    <fullName>RuleNumber__c</fullName>
    <description>Auto number to indicate the rule number; used in trigger for matching.</description>
    <displayFormat>DCR-{0000}</displayFormat>
    <inlineHelpText>Auto number to indicate the rule number; used in trigger for matching.</inlineHelpText>
    <label>Rule Number</label>
    <type>AutoNumber</type>
</CustomField>