metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/fields/SharedWith__c.field-meta.xml
<CustomField>
    <fullName>SharedWith__c</fullName>
    <description>Displayed in related list views.</description>
    <formula>TEXT(DisputeContent__r.ShareWith__c)</formula>
    <inlineHelpText>The dispute party that the automated tip will be shared with.</inlineHelpText>
    <label>Shared With</label>
    <type>Text</type>
</CustomField>