metadata-sfdx/force-app/main/default/objects/DisputeContentRule__c/recordTypes/ContentRule.recordType-meta.xml
<RecordType>
    <fullName>ContentRule</fullName>
    <active>true</active>
    <description>Record type used to manage the rules for when content (e.g., message or tip) needs to be added to the dispute.</description>
    <label>Content Rule</label>
</RecordType>